--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jms-react-components",
-  "version": "4.0.10",
+  "version": "18.5.13",
   "description": "A collection of generic React UI components",
   "main": "dist/Index.js",
   "repository": {
@@ -25,10 +25,16 @@
     "dist": "eslint src && babel src --out-dir dist"
   },
   "dependencies": {
+    "babel-preset-airbnb": "^2.4.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "lodash": "latest",
+    "prop-types": "^15.6.1",
     "radium": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-proptypes": "^1.0.0",
     "screenfull": "latest"
   },
   "devDependencies": {
